fix contact align2

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,7 +156,7 @@ input[type="radio"]:checked ~ .tab-content {
 }
 
 .contact {
-    align-items: center;
+    text-align: center;
 }
 
 footer {
